--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
-Flask==1.1.2
-flask-mongoengine==1.0.0
-gunicorn==20.1.0
-Jinja2==2.11.2
-pymongo==3.11.3
-python-dotenv==0.17.0
-SQLAlchemy==1.3.19
-Werkzeug==1.0.1
+Flask
+flask-mongoengine
+gunicorn
+Jinja2
+pymongo
+python-dotenv
+SQLAlchemy
+Werkzeug
+pillow
+opencv-python
+torch
+torchvision
+numpy
+matplotlib
